syntax = "proto3";

package manabie.bob;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_registration) = true;
option go_package = "github.com/manabie-com/backend/pkg/genproto/bob;pb";

enum Country {
  COUNTRY_NONE = 0;
  COUNTRY_MASTER = 1;
  COUNTRY_VN = 2;
  COUNTRY_ID = 3;
  COUNTRY_SG = 4;
  COUNTRY_JP = 5;
}

enum Subject {
  SUBJECT_NONE = 0;
  SUBJECT_MATHS = 1;
  SUBJECT_BIOLOGY = 2;
  SUBJECT_PHYSICS = 3;
  SUBJECT_CHEMISTRY = 4;
  SUBJECT_GEOGRAPHY = 5;
  SUBJECT_ENGLISH = 6;
  SUBJECT_ENGLISH_2 = 7;
  SUBJECT_JAPANESE = 8;
  SUBJECT_SCIENCE = 9;
  SUBJECT_SOCIAL_STUDIES = 10;
  SUBJECT_LITERATURE = 11;
}

enum TopicType {
  TOPIC_TYPE_NONE = 0;
  TOPIC_TYPE_LEARNING = 1;
  TOPIC_TYPE_PRACTICAL = 2;
  TOPIC_TYPE_EXAM = 3;
  TOPIC_TYPE_ASSIGNMENT = 4;
  TOPIC_TYPE_LIVE_LESSON = 5;
}

enum UserNotificationStatus {
  USER_NOTIFICATION_STATUS_NONE = 0;
  USER_NOTIFICATION_STATUS_NEW = 1;
  USER_NOTIFICATION_STATUS_SEEN = 2;
  USER_NOTIFICATION_STATUS_READ = 3;
  USER_NOTIFICATION_STATUS_FAILED = 4;
}

enum NotificationType {
  NOTIFICATION_TYPE_NONE = 0;
  NOTIFICATION_TYPE_TEXT = 1;
  NOTIFICATION_TYPE_PROMO_CODE = 2;
  NOTIFICATION_TYPE_ASSIGNMENT = 3;
}

enum UploadType {
  UPLOAD_TYPE_AVATAR = 0;
  UPLOAD_TYPE_CHAT = 1;
  UPLOAD_TYPE_ASSIGNMENT = 2;
}

enum PaymentStatus {
  PAYMENT_STATUS_ON_TRIAL = 0;
  PAYMENT_STATUS_EXPIRED_TRIAL = 1;
  PAYMENT_STATUS_PAID = 2;
  PAYMENT_STATUS_LATE_PAYMENT = 3;
}

enum AskDuration {
  THIS_DAY = 0;
  THIS_WEEK = 1;
  THIS_MONTH = 2;
  THIS_YEAR = 3;
}

enum QuestionStatus {
  QUESTION_STATUS_WAITING_FOR_ASSIGN = 0;
  QUESTION_STATUS_ASSIGNED = 1;
  QUESTION_STATUS_MARKED_AS_RESOLVED = 2;
  QUESTION_STATUS_MARKED_AS_INVALID = 3;
  QUESTION_STATUS_INVALID = 4;
  QUESTION_STATUS_SOLVED = 5;
  QUESTION_STATUS_EXPIRED_SOLVED = 6;
  QUESTION_STATUS_RATED = 7;
  QUESTION_STATUS_ARCHIVED = 8;
}

enum TutorStatus {
  TUTOR_STATUS_NONE = 0;
  TUTOR_STATUS_ONLINE = 1;
  TUTOR_STATUS_OFFLINE = 2;
}

enum TopicStatus {
  TOPIC_STATUS_NONE = 0;
  TOPIC_STATUS_DRAFT = 1;
  TOPIC_STATUS_PUBLISHED = 2;
}

enum OrderStatus {
  ORDER_STATUS_NONE = 0;
  ORDER_STATUS_WAITING_FOR_PAYMENT = 1;
  ORDER_STATUS_SUCCESSFULLY = 2;
  ORDER_STATUS_FAILED = 3;
  ORDER_STATUS_CANCELED = 4;
  ORDER_STATUS_ENDED = 5 [ deprecated = true ];
  ORDER_STATUS_PROCESSING_PAYMENT = 6;
  ORDER_STATUS_DELETED = 7;
  ORDER_STATUS_DISABLED = 8;
}

enum OrderTransitionAction {
  ORDER_TRANSITION_NONE = 0;
  ORDER_TRANSITION_PROCESS_PAYMENT = 1;
  ORDER_TRANSITION_COMPLETE = 2;
  ORDER_TRANSITION_FAIL = 3;
  ORDER_TRANSITION_CANCEL = 4;
  ORDER_TRANSITION_CLOSE = 5 [ deprecated = true ];
  ORDER_TRANSITION_DELETE = 6;
  ORDER_TRANSITION_COMPLETE_MANUAL = 7;
}

enum QuestionTransition {
  QUESTION_TRANSITION_ASSIGN = 0;
  QUESTION_TRANSITION_MARKED_AS_RESOLVED = 1;
  QUESTION_TRANSITION_MARKED_AS_INVALID = 2;
  QUESTION_TRANSITION_AGREE_INVALID = 3;
  QUESTION_TRANSITION_DISAGREE_INVALID = 4;
  QUESTION_TRANSITION_AGREE_RESOLVED = 5;
  QUESTION_TRANSITION_DISAGREE_RESOLVED = 6;
  QUESTION_TRANSITION_TIME_OUT_SOLVED = 7;
  QUESTION_TRANSITION_RATE = 8;
  QUESTION_TRANSITION_ARCHIVED = 9;
}

enum CoachAutoEvent {
  COACH_AUTO_EVENT_FINISH_FIRST_LO = 0;
  COACH_AUTO_EVENT_FINISH_FIRST_TOPIC = 1;
}

enum StudentLearningEvent { STUDENT_FINISH_FIRST_THREE_LO_EVENT = 0; }

enum PaymentGateway {
  GATEWAY_NONE = 0;
  GATEWAY_ASIAPAY = 1;
  GATEWAY_ONEPAY = 2;
  GATEWAY_MOMO = 3;
  GATEWAY_ZALO = 4;
  GATEWAY_GRAB = 5;
  GATEWAY_GHN = 6;
  GATEWAY_IOS = 7;
}

enum CodOrderTransitionAction {
  COD_ORDER_TRANSITION_NONE = 0;
  COD_ORDER_TRANSITION_COMPLETE = 1;
  COD_ORDER_TRANSITION_CANCEL = 2;
  COD_ORDER_TRANSITION_COMPLETE_MANUAL = 3;
}

enum CodOrderStatus {
  COD_ORDER_STATUS_NONE = 0;
  COD_ORDER_STATUS_PENDING = 1;
  COD_ORDER_STATUS_CANCELED = 2;
  COD_ORDER_STATUS_SUCCESSFULLY = 3;
}

enum SubscriptionStatus {
  SUBSCRIPTION_STATUS_NONE = 0;
  SUBSCRIPTION_STATUS_ACTIVE = 1;
  SUBSCRIPTION_STATUS_DISABLED = 2;
}

enum PlanPrivilege {
  CAN_ACCESS_LEARNING_TOPICS = 0;
  CAN_ACCESS_PRACTICE_TOPICS = 1;
  CAN_ACCESS_MOCK_EXAMS = 2;
  CAN_ACCESS_ALL_LOS = 3;
  CAN_ACCESS_SOME_LOS = 4;
  CAN_WATCH_VIDEOS = 5;
  CAN_READ_STUDY_GUIDES = 6;
  CAN_SKIP_VIDEOS = 7;
  CAN_CHAT_WITH_TEACHER = 8;
}

enum PaymentMethod {
  PAYMENT_METHOD_NONE = 0;
  PAYMENT_METHOD_ATM = 1;               // ONEPAY
  PAYMENT_METHOD_CREDIT_DEBIT_CARD = 2; // CC
  PAYMENT_METHOD_COD = 3;               // COD
  PAYMENT_METHOD_BANK_TRANSFER = 4;
  PAYMENT_METHOD_IAP = 5;
}

enum UserGroup {
  USER_GROUP_NONE = 0;
  USER_GROUP_STUDENT = 1;
  USER_GROUP_COACH = 2;
  USER_GROUP_TUTOR = 3 [deprecated=true];
  USER_GROUP_STAFF = 4 [deprecated=true];
  USER_GROUP_ADMIN = 5;
  USER_GROUP_TEACHER = 6;
  USER_GROUP_PARENT = 7;
  USER_GROUP_CONTENT_ADMIN = 8 [deprecated=true];
  USER_GROUP_CONTENT_STAFF = 9 [deprecated=true];
  USER_GROUP_SALES_ADMIN = 10 [deprecated=true];
  USER_GROUP_SALES_STAFF = 11 [deprecated=true];
  USER_GROUP_CS_ADMIN = 12 [deprecated=true];
  USER_GROUP_CS_STAFF = 13 [deprecated=true];
  USER_GROUP_SCHOOL_ADMIN = 14;
  USER_GROUP_SCHOOL_STAFF = 15 [deprecated=true];
}

enum AssignmentStatus {
  ASSIGNMENT_STATUS_NONE = 0;
  ASSIGNMENT_STATUS_STARTED = 1;
  ASSIGNMENT_STATUS_UPCOMING = 2;
}

enum AchievementCrown {
  ACHIEVEMENT_CROWN_NONE = 0;
  ACHIEVEMENT_CROWN_BRONZE = 1;
  ACHIEVEMENT_CROWN_SILVER = 2;
  ACHIEVEMENT_CROWN_GOLD = 3;
}

enum CourseType {
  COURSE_TYPE_NONE = 0;
  COURSE_TYPE_CONTENT = 1;
  COURSE_TYPE_LIVE = 2;
}

enum CourseStatus {
  COURSE_STATUS_NONE = 0;
  COURSE_STATUS_ACTIVE = 1;
  COURSE_STATUS_COMPLETED = 2;
  COURSE_STATUS_ON_GOING = 3;
}

enum LessonStatus {
  LESSON_STATUS_NONE = 0;
  LESSON_STATUS_COMPLETED = 1;
  LESSON_STATUS_IN_PROGRESS = 2;
  LESSON_STATUS_NOT_STARTED = 3;
}

enum NotificationEvent {
  NOTIFICATION_EVENT_NONE = 0;
  NOTIFICATION_EVENT_X_LO_COMPLETED = 1;
  NOTIFICATION_EVENT_TEACHER_GIVE_ASSIGNMENT = 2;
  NOTIFICATION_EVENT_TEACHER_RETURN_ASSIGNMENT = 3;
  NOTIFICATION_EVENT_STUDENT_SUBMIT_ASSIGNMENT = 4;
  NOTIFICATION_EVENT_ASSIGNMENT_UPDATED = 5;
}

enum PublishStudentVideoStatus {
  PUBLISH_STUDENT_VIDEO_STATUS_NONE = 0;
  PUBLISH_STUDENT_VIDEO_STATUS_ON = 1;
  PUBLISH_STUDENT_VIDEO_STATUS_OFF = 2;
}
enum UnmuteStudentAudioStatus {
  UNMUTE_STUDENT_AUDIO_STATUS_NONE = 0;
  UNMUTE_STUDENT_AUDIO_STATUS_ON = 1;
  UNMUTE_STUDENT_AUDIO_STATUS_OFF = 2;
}

enum LiveLessonView {
  LIVE_LESSON_VIEW_NONE = 0;
  LIVE_LESSON_VIEW_GALLERY = 1;
  LIVE_LESSON_VIEW_SPEAKER = 2;
}

enum MediaType {
  MEDIA_TYPE_NONE = 0;
  MEDIA_TYPE_VIDEO = 1;
  MEDIA_TYPE_IMAGE = 2;
  MEDIA_TYPE_PDF = 3;
  MEDIA_TYPE_AUDIO = 4;
  MEDIA_TYPE_ZIP = 5;
}

enum LearningObjectiveType {
  LEARNING_OBJECTIVE_TYPE_NONE = 0;
  LEARNING_OBJECTIVE_TYPE_LEARNING = 1;
  LEARNING_OBJECTIVE_TYPE_FLASH_CARD = 2;
  LEARNING_OBJECTIVE_TYPE_OFFLINE_LEARNING = 3;
}